need to fix grid row overlapping

--- a/public/modules/campaigns/css/campaign.css
+++ b/public/modules/campaigns/css/campaign.css
@@ -8,6 +8,6 @@
 
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 100%; 
-    height: 100%;
+    width: 100%;
+    height: 70px;
 }
